--- a/recipe.html
+++ b/recipe.html
@@ -34,7 +34,7 @@ input, textarea { display: block; }
     {{/each}}
     </ul>
     
-    <div itemprop="recipeInstructions">{{instructions}}</div>
+    <div itemprop="recipeInstructions">{{{instructions}}}</div>
   </div>
 </script>
 
